Added a manifest to the app. Updates to the web references.

--- a/hushtags-web/www/index.html
+++ b/hushtags-web/www/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <title>Hush Tags</title>
+    <title>HushTags - Leave Your Mark&#8482;</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+    <link rel="manifest" href="/manifest.json">
     <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
   </head>
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="/bundle.manifest.f8c9ac14c635bc304c37.js"></script><script type="text/javascript" src="/bundle.vendor.5ab1d884f63259b20d6e.js"></script><script type="text/javascript" src="/bundle.app.3cd2b5711461df400f67.js"></script></body>
+<script type="text/javascript" src="/bundle.manifest.d727bdd0fb326e465d90.js"></script><script type="text/javascript" src="/bundle.vendor.5ab1d884f63259b20d6e.js"></script><script type="text/javascript" src="/bundle.app.d1afc2b53a340353bfbd.js"></script></body>
 </html>
