Testing web references on Staging

--- a/hushtags-web/www/index.html
+++ b/hushtags-web/www/index.html
@@ -8,7 +8,10 @@
     <title>HushTags - Leave Your Mark&#8482;</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
+
     <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
+    <script src="https://js.braintreegateway.com/web/3.28.1/js/client.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.28.1/js/google-payment.min.js"></script>
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107355809-2"></script>
@@ -23,5 +26,5 @@
   </head>
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="/bundle.manifest.2ead8a25f601e66c76fc.js"></script><script type="text/javascript" src="/bundle.vendor.5ab1d884f63259b20d6e.js"></script><script type="text/javascript" src="/bundle.app.7039ed18f071bd26fc95.js"></script></body>
+<script type="text/javascript" src="/bundle.manifest.99b4bcfe724793c4478d.js"></script><script type="text/javascript" src="/bundle.vendor.d243dde9470474862812.js"></script><script type="text/javascript" src="/bundle.app.9a7a3d57c27ab73c1535.js"></script></body>
 </html>
