Updated web references.

--- a/hushtags-web/www/index.html
+++ b/hushtags-web/www/index.html
@@ -23,8 +23,9 @@
       gtag('config', 'UA-107355809-2');
     </script>
     
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/cb38868e2cbcc2b1590e6f899/9b904a194b3a12c70ab4ce67b.js");</script>
   </head>
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="/bundle.manifest.bd795722d00abc33a0f7.js"></script><script type="text/javascript" src="/bundle.vendor.f8aab49aac7cecad4d3a.js"></script><script type="text/javascript" src="/bundle.app.48da393439f95eb0e2b1.js"></script></body>
+<script type="text/javascript" src="/bundle.manifest.7b145c164b8619b78046.js"></script><script type="text/javascript" src="/bundle.vendor.5ab1d884f63259b20d6e.js"></script><script type="text/javascript" src="/bundle.app.2d1678ce12b3513035fc.js"></script></body>
 </html>
