Added a mobile layout to the Portal landing page.

--- a/hushtags-web/static/portal/index.htm
+++ b/hushtags-web/static/portal/index.htm
@@ -23,9 +23,13 @@
 	<header>
 		HushTags&trade; - Commercial Portal
 		<div class="seperator"></div>
-		<a href="javascript: void(0)">Learn More</a>
-		<a href="javascript: void(0)">Contact</a>
-		<a href="javascript: void(0)" style="position: absolute; right: 20px;">Help</a>
+	
+		<div class="links">
+			<a href="javascript: void(0)">Learn More</a>
+			<div class="seperator"></div>
+			<a href="javascript: void(0)">Contact</a>
+			<a href="javascript: void(0)" style="float: right; margin-top: 3px; margin-right: 20px;">Help</a>
+		</div>
 	</header>
 
 	<body>
@@ -33,6 +37,6 @@
 	</body>
 
 	<footer>
-		Copyright Creative Cretin, LLC · 2019
+		Copyright <a href="https://cretin.co/">Creative Cretin, LLC</a> · 2019
 	</footer>
 </html>
