--- a/hushtags-web/static/portal/index.htm
+++ b/hushtags-web/static/portal/index.htm
@@ -17,7 +17,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-		<link href="main.css" rel="stylesheet">
+		<link href="main2.css" rel="stylesheet">
 	</head>
 
 	<header>
