--- a/hushtags-web/static/ios/index.htm
+++ b/hushtags-web/static/ios/index.htm
@@ -106,6 +106,10 @@
       }
 
       @media only screen and (max-width: 400px) {
+        .heading  {
+          padding: 0px 15px;
+        }
+        
         .heading h1 {
           font-size: 1.78em;
         }
@@ -113,13 +117,13 @@
     </style>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107355809-2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107355809-3"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){window.dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-107355809-2');
+      gtag('config', 'UA-107355809-3');
     </script>
 
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/cb38868e2cbcc2b1590e6f899/9b904a194b3a12c70ab4ce67b.js");</script>
